manifest/objects/Apttus__AgreementInsight__c.object
<CustomObject>
    <description>Store all the Insight related data of an agreement</description>
    <fields>
        <fullName>Apttus__AgreementId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Agreement Id on which the Insight rating is defined</description>
        <inlineHelpText>Agreement Id on which the Insight rating is defined</inlineHelpText>
        <label>Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Agreement Insights</relationshipLabel>
        <relationshipName>AgreementInsights</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__CalculationCriteriaResults__c</fullName>
        <description>Displays the calculated values on which the criteria was satisfied</description>
        <inlineHelpText>Displays the calculated values on which the criteria was satisfied</inlineHelpText>
        <label>Calculation Criteria Results</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__CalculationCriteria__c</fullName>
        <description>Displays the formula for the calculation done on the defined criteria</description>
        <inlineHelpText>Displays the formula for the calculation done on the defined criteria</inlineHelpText>
        <label>Calculation Criteria</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__ContentId__c</fullName>
        <description>Content Id of the document</description>
        <inlineHelpText>Content Id of the document</inlineHelpText>
        <label>Content Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__CriteriaFieldValues__c</fullName>
        <description>Displays the existing values for the criteria fields</description>
        <inlineHelpText>Displays the existing values for the criteria fields</inlineHelpText>
        <label>Criteria Field Values</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__Criteria__c</fullName>
        <description>Criteria for deriving the risk score on the insight</description>
        <inlineHelpText>Criteria for deriving the risk score on the insight</inlineHelpText>
        <label>Criteria Summary</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__DocumentVersionDetailId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Document Version on which the Insight rating is defined</description>
        <inlineHelpText>Document Version on which the Insight rating is defined</inlineHelpText>
        <label>Document Version Detail</label>
        <referenceTo>Apttus__DocumentVersionDetail__c</referenceTo>
        <relationshipLabel>Agreement Insights</relationshipLabel>
        <relationshipName>AgreementInsights</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__Guidance__c</fullName>
        <description>Guidance of the Insight</description>
        <inlineHelpText>Guidance of the Insight</inlineHelpText>
        <label>Guidance</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__IDEProvisionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Provision on which the insight was found</description>
        <inlineHelpText>Provision on which the insight was found</inlineHelpText>
        <label>IDE Provision</label>
        <referenceTo>Apttus__IDEProvision__c</referenceTo>
        <relationshipLabel>Agreement Insights</relationshipLabel>
        <relationshipName>AgreementInsights</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__IndividualRiskScore__c</fullName>
        <description>Individual Risk Score</description>
        <formula>IF( NOT(ISNULL(Apttus__Rating__c)) &amp;&amp; NOT(ISBLANK(Apttus__RatingIconPath__c)) &amp;&amp; NOT(ISBLANK(Apttus__RatingLevel__c )), IMAGE(Apttus__RatingIconPath__c, &quot;&quot;) + &apos; &apos; + TEXT(Apttus__Rating__c) +&apos; (&apos; + Apttus__RatingLevel__c + &apos;)&apos; , &apos;&apos;)</formula>
        <inlineHelpText>Individual Risk Score</inlineHelpText>
        <label>Individual Risk Score</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__IsValid__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Validity of the Insight</description>
        <inlineHelpText>Validity of the Insight</inlineHelpText>
        <label>Is Valid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__RatingIconPath__c</fullName>
        <description>Rating Icon Path</description>
        <inlineHelpText>Rating Icon Path</inlineHelpText>
        <label>Rating Icon Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__RatingLevel__c</fullName>
        <description>Rating Level</description>
        <inlineHelpText>Rating Level</inlineHelpText>
        <label>Rating Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__Rating__c</fullName>
        <description>Rating of the Insight</description>
        <inlineHelpText>Rating of the Insight</inlineHelpText>
        <label>Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus__Type__c</fullName>
        <description>Type of the Insight/Provision Name</description>
        <inlineHelpText>Type of the Insight/Provision Name</inlineHelpText>
        <label>Type</label>
        <type>TextArea</type>
    </fields>
    <label>Agreement Insights</label>
    <listViews>
        <fullName>Contract_Ops_AgreementInsight</fullName>
        <filterScope>Queue</filterScope>
        <label>Contract Ops</label>
        <queue>Contract_Ops</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Agreement Insight Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agreement Insights</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>